[package]
name = "pallet-account-types"
version = "0.1.0"
edition = "2021"
authors = ["Ëtrid Foundation"]
description = "Account management pallet for Ëtrid multichain"
license = "Apache-2.0"

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
hex = { workspace = true }

[features]
default = ["std"]
std = [
"codec/std",
"scale-info/std",
"frame-support/std",
"frame-system/std",
"sp-core/std",
"sp-std/std",
"sp-runtime/std",
]

