[package]
name = "pallet-multichain"
version = "0.1.0"
edition = "2021"

[dependencies]
frame-support.workspace = true
frame-system.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
codec.workspace = true
scale-info.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-core/std",
  "sp-io/std",
  "codec/std",
  "scale-info/std"
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime"
]