[package]
name = "etrid-primitives"
version = "0.1.0"
edition = "2021"
authors = ["Ëtrid Foundation"]
description = "Core primitives for the Ëtrid Multichain Network"
license = "Apache-2.0"

[dependencies]
# Substrate primitives
codec = { workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Serialization (std only)
serde = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "serde/std",
]
