[package]
name = "etrid-vmw-gas"
version = "0.1.0"
edition = "2021"
authors = ["Etrid Foundation"]
license = "Apache-2.0"

[dependencies]
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
codec = { package = "parity-scale-codec", workspace = true }
scale-info = { workspace = true }
etrid-economics = { path = "../economics", default-features = false }

[dev-dependencies]
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "codec/std",
    "scale-info/std",
    "etrid-economics/std",
]
