[package]
name = "etrid-stake-deposit"
version = "0.1.0"
authors = ["Ëtrid Foundation"]
description = "Validator staking and delegation module for ÉTRID - handles stake deposits, withdrawals, delegation, reward distribution, and slashing"
license = "Apache-2.0"
edition = "2021"

[dependencies]
# No external dependencies required - uses only std library
# The module implements validator staking logic using standard Rust collections and types

[dev-dependencies]
# Test dependencies are handled by standard Rust test framework

[features]
default = ["std"]
std = []
