[package]
name = "etwasm-gas-metering"
version = "0.1.0"
authors = ["Ëtrid Team"]
edition = "2021"
license = "Apache-2.0"
description = "Gas metering and cost calculation for ETWasm VM"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506", default-features = false }
etrid-economics = { path = "../../06-native-currency/economics", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-std/std",
    "etrid-economics/std",
]
